Fix loading screen having scrolling (and animation not centered)

--- a/Calcium.Web/wwwroot/css/style.css
+++ b/Calcium.Web/wwwroot/css/style.css
@@ -49,10 +49,14 @@ main {
 
 /* EMOJI LOADING BAR */
 #emoji-loading {
+    position: fixed;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    top: 0;
     display: flex;
     align-items: center;
     justify-content: center;
-    flex: 1;
     gap: 0.25rem;
 }
 
